[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data5310_final_project_2025"
version = "0.1.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    # Core runtime
    "python-dateutil>=2.8.2",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "notebook>=6.5.0",

    # Geospatial stack (geopandas plus its common Python deps)
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.4.0",

    # Optional spatial index (may require system libraries)
    "rtree>=1.0.1",
]

[project.optional-dependencies]
# Lightweight visualization extras for interactive charts
altair = [
    "altair>=5.0.0",
    "vega_datasets>=0.9.0"
]

# Convenience bundle for visualization tooling (savers, renderers)
viz = [
    "altair>=5.0.0",
    "vega_datasets>=0.9.0",
    "altair_saver>=0.5.0"
]

# Extra geospatial packages that are sometimes installed separately
geo = [
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.4.0",
    "rtree>=1.0.1"
]